fix: remove extra scrollbar from Search when in Drawer

--- a/packages/xmlui-search/src/Search.module.scss
+++ b/packages/xmlui-search/src/Search.module.scss
@@ -21,10 +21,6 @@ $borderRadius-SearchItem: createThemeVar("borderRadius-#{$componentListItem}");
 $backgroundColor-SearchItem--hover: createThemeVar("backgroundColor-#{$componentListItem}--hover");
 $borderColor-SearchItem--focus: createThemeVar("borderColor-#{$componentListItem}--focus");
 
-.container {
-  @include t.paddingVars($themeVars, $componentContainer);
-}
-
 .listPanel {
   @include t.borderVars($themeVars, $componentListPanel);
   @include t.paddingVars($themeVars, $componentListPanel);
